--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <header>
-        <div class="contenedor">
+        <div class="contenedor animated fadeIn fast">
             <div class="contenedor-texto">
                 <div class="texto">
                     <h1 class="about-us">Acerca de nosotros</h1>
@@ -13,7 +13,7 @@
         </div>
     </header>
 
-<div class="contenedor">
+<div class="contenedor animated fadeIn fast">
     <div class="main-contenedor">
         <div class="card">
             <div class="contenedor-card">
