--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block head %}{{ titulo }} | {{ block.super }}{% endblock head %}
 {% block content %}
-    <div class="contenedor-contact">
+    <div class="contenedor-contact animated fadeIn fast">
         <div class="container contact-margin">
             <div class="row">
                 <div class="col-md-8">
