--- a/src/templates/promociones.html
+++ b/src/templates/promociones.html
@@ -7,7 +7,7 @@
         <section class="main">
 
             <!--POMOCIONES-->
-            <div class="mas-vendido">
+            <div class="mas-vendido  animated fadeIn fast">
                 <h3>productos en promoción</h3>
             </div>
             <div class="baraja">
@@ -21,11 +21,11 @@
                                     {% endif %}
                                 </div>
                                 <div class="body-tarjeta">
-                                    <a class="tarjeta-titulo" href="{{ obj.get_absolute_url }}">
+                                    <a class="tarjeta-titulo" href="{{ equipo.get_absolute_url }}">
                                         {{ equipo.nombre|truncatechars:60 }}
                                     </a>
                                     <p class="clave">{{ equipo.clave }}</p>
-                                    <p class="descripcion">{{  equipo.descripcion|truncatechars:100 }}</p>
+                                    <p class="descripcion">{{  equipo.get_markdown|truncatechars:100 }}</p>
                                     {% if user.is_authenticated %}
                                         <span class="precio">$ {{ equipo.precio }}</span>
                                     {% endif %}
