--- a/src/templates/categoria.html
+++ b/src/templates/categoria.html
@@ -2,36 +2,32 @@
 {% load static %}
 {% block head %}{{ titulo }} | {{ block.super }}{% endblock head %}
 {% block content %}
-    <div class="contenedor animated fadeIn fast">
+    <div class="contenedor">
         <section class="main">
-            <div class="mas-vendido">
+            <div class="mas-vendido animated fadeIn fast">
                 <h3>{{titulo}}</h3>
             </div>
-            <div class="baraja">
+            <div class="baraja animated fadeIn fast"">
                 {% for equipo in object_list %}
-                    <div class="tarjeta zoom">
-                        <div class="contenedor-tarjeta">
-                            <div class="header-tarjeta">
-                                {% if equipo.imagen %}
-                                <a href="{{ equipo.get_absolute_url }}"><img src="{{ equipo.imagen.url }}" class="img-responsive" alt="imagen-producto"/></a>
-                                {% endif %}
-                            </div>
-                            <div class="body-tarjeta">
-                                <a class="tarjeta-titulo" href="{{ obj.get_absolute_url }}">
-                                    {{ equipo.nombre|truncatechars:60 }}
-                                </a>
-                                <p class="clave">{{ equipo.clave }}</p>
-                                <p class="descripcion">{{  equipo.get_markdown|truncatechars:120 }}</p>
-                                {% if user.is_authenticated %}
-                                    <div class="precio-contenedor">
-                                        <span class="precio">$ {{ equipo.precio }}</span>
-                                    </div>
-                                {% endif %}
-                            </div>
-                            <div class="footer-tarjeta">
-                                <a href="{{ equipo.get_absolute_url }}" class="btn btn-default btn-block" role="button">Ver detalles</a>
-                            </div>
-                        </div><!--.contenedor-tarjeta-->
+                    <div class="tarjeta">
+                        <div class="header-tarjeta">
+                            {% if equipo.imagen %}
+                            <a href="{{ equipo.get_absolute_url }}"><img src="{{ equipo.imagen.url }}" class="img-responsive" alt="imagen-producto"/></a>
+                            {% endif %}
+                        </div>
+                        <div class="body-tarjeta">
+                            <a class="tarjeta-titulo" href="{{ obj.get_absolute_url }}">
+                                {{ equipo.nombre|truncatechars:60 }}
+                            </a>
+                            <p class="clave">{{ equipo.clave }}</p>
+                            <p class="descripcion">{{  equipo.get_markdown|truncatechars:120 }}</p>
+                            {% if user.is_authenticated %}
+                                <span class="precio">$ {{ equipo.precio }}</span>
+                            {% endif %}
+                        </div>
+                        <div class="footer-tarjeta">
+                            <a href="{{ equipo.get_absolute_url }}" class="button green" role="button">Ver detalles</a>
+                        </div>
                     </div>
                 {% endfor %}
             </div><!--.baraja-->
