--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,8 +12,8 @@
             </div>
             <div class="baraja">
                 {% for equipo in object_list %}
-                    <div class="tarjeta zoom">
-                        <div class="contenedor-tarjeta">
+                    <div class="tarjeta">
+                        <!--<div class="contenedor-tarjeta">-->
                             <div class="header-tarjeta">
                                 {% if equipo.imagen %}
                                     <a href="{{ equipo.get_absolute_url }}"><img src="{{ equipo.imagen.url }}" class="img-responsive" alt="imagen-producto"/></a>
@@ -21,7 +21,7 @@
                             </div>
                             <div class="body-tarjeta">
                                 <a class="tarjeta-titulo" href="{{ equipo.get_absolute_url }}">
-                                    {{ equipo.nombre|truncatechars:38 }}
+                                    {{ equipo.nombre|truncatechars:60 }}
                                 </a>
                                 <p class="clave">{{ equipo.clave }}</p>
                                 <p class="descripcion">{{  equipo.descripcion|truncatechars:100 }}</p>
@@ -32,9 +32,9 @@
                                 {% endif %}
                             </div>
                             <div class="footer-tarjeta">
-                                <a href="{{ equipo.get_absolute_url }}" class="btn-hide btn btn-default btn-block" role="button">Ver detalles</a>
+                                <a href="{{ equipo.get_absolute_url }}" class="button green" role="button">Ver detalles</a>
                             </div>
-                        </div><!--.contenedor-tarjeta-->
+                        <!--</div>&lt;!&ndash;.contenedor-tarjeta&ndash;&gt;-->
                     </div>
                 {% endfor %}
             </div><!--.baraja-->
@@ -45,27 +45,25 @@
             </div>
             <div class="baraja">
                 {% for equipo in top_vendidos %}
-                    <div class="tarjeta zoom">
-                        <div class="contenedor-tarjeta">
-                            <div class="header-tarjeta">
-                                {% if equipo.imagen %}
-                                   <a href="{{ equipo.get_absolute_url }}"><img src="{{ equipo.imagen.url }}" class="img-responsive" alt="imagen-producto"/></a>
-                                {% endif %}
-                            </div>
-                            <div class="body-tarjeta">
-                                <a class="tarjeta-titulo" href="{{ equipo.get_absolute_url }}">
-                                    <i class="fa fa-star gold"></i> {{ equipo.nombre|truncatechars:60 }}
-                                </a>
-                                <p class="clave">{{ equipo.clave }}</p>
-                                <p class="descripcion">{{  equipo.descripcion|truncatechars:100 }}</p>
-                                {% if user.is_authenticated %}
-                                    <span class="precio">$ {{ equipo.precio }}</span>
-                                {% endif %}
-                            </div>
-                            <div class="footer-tarjeta">
-                                <a href="{{ equipo.get_absolute_url }}" class="btn-hide btn btn-default btn-block" role="button">Ver detalles</a>
-                            </div>
-                        </div><!--.contenedor-tarjeta-->
+                    <div class="tarjeta">
+                        <div class="header-tarjeta">
+                            {% if equipo.imagen %}
+                               <a href="{{ equipo.get_absolute_url }}"><img src="{{ equipo.imagen.url }}" class="img-responsive" alt="imagen-producto"/></a>
+                            {% endif %}
+                        </div>
+                        <div class="body-tarjeta">
+                            <a class="tarjeta-titulo" href="{{ equipo.get_absolute_url }}">
+                                <i class="fa fa-star gold"></i> {{ equipo.nombre|truncatechars:60 }}
+                            </a>
+                            <p class="clave">{{ equipo.clave }}</p>
+                            <p class="descripcion">{{  equipo.descripcion|truncatechars:100 }}</p>
+                            {% if user.is_authenticated %}
+                                <span class="precio">$ {{ equipo.precio }}</span>
+                            {% endif %}
+                        </div>
+                        <div class="footer-tarjeta">
+                            <a href="{{ equipo.get_absolute_url }}" class="button green" role="button">Ver detalles</a>
+                        </div>
                     </div>
                 {% endfor %}
             </div><!--.baraja-->
