Modify equipo.description in template

--- a/src/templates/categoria.html
+++ b/src/templates/categoria.html
@@ -20,7 +20,7 @@
                                 {{ equipo.nombre|truncatechars:60 }}
                             </a>
                             <p class="clave">{{ equipo.clave }}</p>
-                            <p class="descripcion">{{  equipo.get_markdown|truncatechars:120 }}</p>
+                            <p class="descripcion">{{  equipo.descripcion|truncatechars:120 }}</p>
                             {% if user.is_authenticated %}
                                 <span class="precio">$ {{ equipo.precio }}</span>
                             {% endif %}
