Changes to main.css

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -153,6 +153,7 @@ ul li a:hover {
 
 .dropdown-submenu {
     position: relative;
+    margin-top: -8px!important;
 }
 .dropdown-submenu .dropdown-menu {
     top: 0;
